--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <div class="inner">
         <div class="nav">
           <div class="nav__left">
-            <%= link_to image_tag("marketforyou.logo.png", class: :logo) %>
+            <%= link_to image_tag("marketforyou.logo.png", class: :logo), root_path %>
           </div>
           <% if user_signed_in? %>
             <div class="nav__right">
@@ -25,8 +25,15 @@
               <%= link_to "チャット", root_path, class: :nav__btn %>
               <%= link_to "来店予約", root_path, class: :nav__btn %>
             </div>
+          <% elsif staff_signed_in? %>
+            <div class="nav__right">
+              <%= link_to "ログアウト", destroy_staff_session_path, method: :delete, class: :nav__btn %>
+              <%= link_to "チャット", root_path, class: :nav__btn %>
+            </div>
           <% else %>
             <div class="nav__right">
+              <%= link_to "スタッフログイン", new_staff_session_path, class: :nav__btn %>
+              <%= link_to "スタッフはこちら", new_staff_registration_path, class: :nav__btn %>
               <%= link_to "ログイン", new_user_session_path, class: :nav__btn %>
               <%= link_to "新規登録", new_user_registration_path, class: :nav__btn %>
             </div>
