--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -13,7 +13,7 @@
 
         <div class="field">
           <%= f.label :password, "パスワード(6文字以上)" %><br />
-          <%= f.password_field :password, class: :form__text, placeholder:"例) 半角英数字", autocomplete: "new-password" %>
+          <%= f.password_field :password, class: :form__text, placeholder:"例) 半角英数字のみ", autocomplete: "new-password" %>
         </div>
 
         <div class="field">
