--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -138,6 +138,12 @@ a {
   font-size: 1.3vw;
   list-style: circle;
   color: rgb(182, 48, 0);
+  list-style: none;
+}
+
+.login-flash-message {
+  text-align: center;
+  color: red;
 }
 
 /* メイン */
