--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,9 @@
         </div>
       </div>
     </header>
-
+          <% if flash[:notice] %>
+            <p><%= flash[:notice] %></p>
+          <% end %>
     <%= yield %>
 
     <footer class="footer">
