--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -407,15 +407,15 @@ select {
 }
 
 .form-submit {
-  background-color: #38AEF0;
+  background-color: #faccf7;
   border: none;
   color: #FAFAFA;
   font-size: 16px;
   height: 50px;
   margin-left: 15px;
   padding: 0 20px;
-  display: inline-block;
 }
+
 .form-image {
   font-size: 12px;
   background-color: lightblue;
