--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,53 +1,55 @@
-<h1>DM</h1>
+<div class='chat-room-form'>
+<h1>チャットルーム</h1>
 
 <h4>参加者</h4>
 
 <% @entries.each do |e| %>
     <% if e.user_id.present? && user = User.find_by(id: e.user_id) %>
-    <div class="message-user">
         <h5><strong><a href="/users/<%= user.id %>"><%= "#{user.nickname}さん" %></a></strong></h5>
     <% elsif e.staff_id.present? && staff = Staff.find_by(id: e.staff_id)%>
         <h5><strong><a href="/staffs/<%= staff.id %>"><%= "#{staff.nickname}さん" %></a></strong></h5>
     <% end %>
 <% end %>
-<hr>
-
-  <% if @messages.present? %>
+</div>
+  <% if @messages.present?%>
     <% @messages.each do |m| %>
-      <strong><%= m.content %></strong>
-      <% if m.user_id.present? && user = User.find_by(id: m.user_id) %>
-          <small>by<strong><a href="/users/<%= user.id %>"><%= "#{user.nickname}さん" %><small><%= l user.created_at %></a></small></strong></small>
-      <% elsif m.staff_id.present? && staff = Staff.find_by(id: m.staff_id)%>
-          <small>by<strong><a href="/staffs/<%= staff.id %>"><%= "#{staff.nickname}さん" %><small><%= l staff.created_at %></a></small></strong></small>
+      <% if m.image.attached? %>
+        <%= image_tag m.image.variant(resize: '250x250'), class: 'message-image' %>
       <% end %>
-  <hr>
+        <div class="message-content">
+          <%= m.content %>
+        </div>
+      <% if m.user_id.present? && user = User.find_by(id: m.user_id) %>
+        <a href="/users/<%= user.id %>"></a>
+        <div class="message-user">
+          <%= "#{user.nickname}さん" %>
+        </div>
+        <div class="message-date">
+          <%= l user.created_at %>
+        </div>
+      <% elsif m.staff_id.present? && staff = Staff.find_by(id: m.staff_id)%>
+        <a href="/staffs/<%= staff.id %>"></a>
+          <div class="message-user">
+            <%= "#{staff.nickname}さん" %>
+          </div>
+          <div class="message-date">
+            <%= l staff.created_at %>
+          </div>
+      <% end %>
     <% end %>
   <% else %>
     <h3 class="text-center">メッセージはまだありません</h3>
   <% end %>
 
-<div class="form">
+  <%= form_with model: @message, class: 'form', local: true do |f| %>
   <div class="form-input">
-    <%= form_for @message do |f| %>
       <%= f.text_field :content, class: 'form-message', placeholder: "メッセージを入力して下さい", :size => 150 %>
       <%= f.hidden_field :room_id, :value => @room.id %>
+
+    <label class="form-image">
+      <span class="image-file">画像</span>
+      <%= f.file_field :image, class: 'hidden' %>
+    </label>
   </div>
-</div>
       <%= f.submit "送信", class: 'form-submit'%>
     <% end %>
-
-<script>
-    const form = document.getElementById("new_message");
-
-    form.addEventListener("submit", function (event) {
-        const content = document.getElementById("message_content").value;
-        if (content != '') {
-
-        } else {
-            event.preventDefault();
-            alert("メッセージを入力してください。");
-            const submit_btn = document.getElementById("submit_btn");
-            submit_btn.removeAttribute('data-disable-with');
-        }
-    });
-</script>
