--- a/app/views/staffs/registrations/new.html.erb
+++ b/app/views/staffs/registrations/new.html.erb
@@ -8,22 +8,22 @@
 
         <div class="field">
           <%= f.label :nickname, "ニックネーム" %><br />
-          <%= f.text_field :nickname, class: :form__text, autofocus: true %>
+          <%= f.text_field :nickname, class: :form__text, autofocus: true, placeholder:"例) yamada"%>
         </div>
 
         <div class="field">
           <%= f.label :password, "パスワード(6文字以上)" %><br />
-          <%= f.password_field :password, class: :form__text, autocomplete: "new-password" %>
+          <%= f.password_field :password, class: :form__text, placeholder:"例) 半角英数字のみ", autocomplete: "new-password" %>
         </div>
 
         <div class="field">
           <%= f.label :password_confirmation, "パスワード再入力" %><br />
-          <%= f.password_field :password_confirmation, class: :form__text, autocomplete: "password-confirmation" %>
+          <%= f.password_field :password_confirmation, class: :form__text, placeholder:"例) 同じパスワードを入力", autocomplete: "password-confirmation" %>
         </div>
 
         <div class="field">
           <%= f.label :email, "メールアドレス" %><br />
-          <%= f.email_field :email, class: :form__text, autocomplete: "email" %>
+          <%= f.email_field :email, class: :form__text, placeholder:"例) PC・携帯どちらでも可", autocomplete: "email" %>
         </div>
 
         <div class="actions">
