--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -28,6 +28,8 @@
         <% elsif staff_signed_in? %>
           <li><%= link_to image_tag("chat.png", class:"pop_image"), users_path %></li>
         <% else %>
+          <li><%= link_to image_tag("chat.png", class:"pop_image"), "/" %></li>
+          <li><%= link_to image_tag("reservation.png", class:"pop_image"), "/" %></li>
         <% end %>
       </ul>
     </div>
